--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background"
+    android:id="@+id/rootLayout"
     tools:context="android.skmaury.com.uberclone.MainActivity">
 
     <LinearLayout
@@ -46,4 +47,32 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
+    <LinearLayout
+        android:orientation="horizontal"
+        android:weightSum="2"
+        android:layout_above="@id/txt_rider_app"
+        android:layout_margin="16dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <Button
+            android:background="@drawable/btn_sign_in_background"
+            android:id="@+id/btnSign"
+            android:textColor="@android:color/white"
+            android:text="@string/sign_in"
+            android:layout_marginEnd="6dp"
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content" />
+
+        <Button
+            android:background="@drawable/btn_register_background"
+            android:id="@+id/btnRegister"
+            android:textColor="@color/btnRegister"
+            android:text="@string/register"
+            android:layout_marginStart="6dp"
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
 </RelativeLayout>
